# cv2-web-streamer

./: .gitignore  README.md  pyproject.toml
src/cv2_web_streamer/: __init__.py  _asset_installer.py  _assets.py  cv2_web_stream.py  cv2_web_streamer.py
tests/: test.py
